@@ -3,6 +3,8 @@ package uk.org.thehickses.badminton;
 import static java.util.stream.Collectors.*;
 
 import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -14,16 +16,25 @@ import java.util.stream.Stream;
 
 import org.apache.commons.lang3.tuple.Pair;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
+
 public class Session
 {
-    private final LocalDate date;
-    private final List<Player> players;
+    private static DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("d MMM yyyy");
+
+    private LocalDate date;
+    private final List<Player> players = new ArrayList<>();
     private final List<List<Pair<Player, Player>>> pairings = new ArrayList<>();
+
+    Session()
+    {
+
+    }
 
     public Session(LocalDate date, List<Player> players)
     {
         this.date = date;
-        this.players = new ArrayList<>(players);
+        this.players.addAll(players);
     }
 
     public List<Pair<Player, Player>> getPairings(int round)
@@ -37,7 +48,7 @@ public class Session
                     .limit(roundsNeeded)
                     .map(r -> r.collect(toList()))
                     .peek(Collections::shuffle)
-                    .collect(toList());
+                    .toList();
             pairings.addAll(pairs);
             IntStream.range(Math.max(1, currentCount), pairings.size())
                     .forEach(i -> Collections.sort(pairings.get(i), posComparator(i)));
@@ -71,8 +82,8 @@ public class Session
     {
         return pair ->
             {
-                var pos1 = pos.get(pair.getLeft());
-                var pos2 = pos.get(pair.getRight());
+                var pos1 = pos.getOrDefault(pair.getLeft(), 0);
+                var pos2 = pos.getOrDefault(pair.getRight(), 0);
                 if (pos1 < pos2)
                     return pos2 * 100 + pos1;
                 return pos1 * 100 + pos2;
@@ -84,13 +95,65 @@ public class Session
         return date;
     }
 
+    @JsonProperty("date")
+    public String getDateString()
+    {
+        return date.format(dateFormatter);
+    }
+
+    @JsonProperty("date")
+    public void setDateString(String str)
+    {
+        date = LocalDate.parse(str, dateFormatter);
+    }
+
     public List<Player> getPlayers()
     {
         return players;
     }
 
+    @JsonProperty("players")
+    public List<String> getPlayerNames()
+    {
+        return players.stream()
+                .map(Player::getName)
+                .toList();
+    }
+
+    @JsonProperty("players")
+    public void setPlayerNames(List<String> names)
+    {
+        players.addAll(names.stream()
+                .map(Player::new)
+                .toList());
+    }
+
     public List<List<Pair<Player, Player>>> getPairings()
     {
         return pairings;
+    }
+
+    @JsonProperty("pairings")
+    public List<List<List<String>>> getPairingsLists()
+    {
+        return pairings.stream()
+                .map(r -> r.stream()
+                        .map(p -> List.of(p.getLeft()
+                                .getName(),
+                                p.getRight()
+                                        .getName()))
+                        .toList())
+                .toList();
+    }
+
+    @JsonProperty("pairings")
+    public void setPairingsLists(List<List<List<String>>> pLists)
+    {
+        pairings.addAll(pLists.stream()
+                .map(r -> r.stream()
+                        .map(ArrayDeque::new)
+                        .map(p -> Pair.of(new Player(p.pop()), new Player(p.pop())))
+                        .toList())
+                .toList());
     }
 }
